# logiLed

./: .gitignore  .readthedocs.yaml  LICENSE.txt  MANIFEST.in  README.md  genindex.html  logipy.toml  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  setup.py
.github/workflows/: auto_doc.yml  main.yml  pip-upload.test.yml  pip-upload.yml
doc/: requirements.txt
doc/source/: conf.py  error.rst  example.rst  exemple.rst  index.rst  install.rst  logiled.rst  logipy.rst  usage.rst
doc/source/example/: color_key_pressed.py
doc_generator/source/: conf.py
docs/: index.html  search.html  searchindex.js
docs/_sources/: index.rst.txt
docs/source/: conf.py  index.rst
logiled/: __init__.py  dll_definition.py
logipy/: dll_definition.py  logi_led.py
samples/: test.py
